fix(project): 요청 DTO 검증 보강, 콤마 검증을 컨버터에서 @Pattern 으로 이동