@@ -4,7 +4,6 @@ import jakarta.persistence.AttributeConverter;
 import jakarta.persistence.Converter;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Converter
 public class TechStackListConverter implements AttributeConverter<List<String>, String> {
@@ -14,9 +13,6 @@ public class TechStackListConverter implements AttributeConverter<List<String>, 
     if (attribute == null || attribute.isEmpty()) {
       return null;
     }
-    if (attribute.stream().anyMatch(stack -> stack.contains(","))) {
-      throw new IllegalArgumentException("기술 스택 이름에는 쉼표를 쓸 수 없습니다.");
-    }
     return String.join(",", attribute);
   }
 
@@ -25,6 +21,6 @@ public class TechStackListConverter implements AttributeConverter<List<String>, 
     if (dbData == null || dbData.isBlank()) {
       return List.of();
     }
-    return Arrays.stream(dbData.split(",")).map(String::trim).collect(Collectors.toList());
+    return Arrays.stream(dbData.split(",")).map(String::trim).toList();
   }
 }
